--- a/install
+++ b/install
@@ -1,6 +1,7 @@
 #!/bin/bash
 
 cd "$(dirname ${BASH_SOURCE[0]})"
+ln -sf $PWD/bash.d ~/.bash.d
 ln -sf $PWD/bash_profile ~/.bash_profile
 ln -sf $PWD/vimrc ~/.vimrc
 
