Download git completion script in install

--- a/install
+++ b/install
@@ -18,3 +18,8 @@ for FILE in "${FILES[@]}"; do
     rm -rf "$DEST"
     ln -sf "$PWD/$FILE" "$DEST"
 done
+
+GIT_COMPLETION=/usr/local/bin/git-completion.bash
+if [[ ! -f "$GIT_COMPLETION" ]]; then
+    curl -o "$GIT_COMPLETION" https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash
+fi
