Use hub over git

--- a/install
+++ b/install
@@ -23,3 +23,11 @@ GIT_COMPLETION=/usr/local/bin/git-completion.bash
 if [[ ! -f "$GIT_COMPLETION" ]]; then
     curl -o "$GIT_COMPLETION" https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash
 fi
+
+if ! type brew &> /dev/null; then
+    /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+fi
+
+if ! type hub &> /dev/null; then
+    brew install hub
+fi
