Replace kitty with wezterm

--- a/install
+++ b/install
@@ -38,7 +38,7 @@ find ./man -type f | while read file; do
     link "/usr/local/share/${file}" "${PWD}/${file}"
 done
 
-link "${HOME}/.config/kitty" "${PWD}/kitty"
+link "${HOME}/.config/wezterm" "${PWD}/wezterm"
 
 ############### Upstream completion scripts ###############
 
@@ -145,15 +145,11 @@ link "${HOME}/Library/Application Support/Sublime Text/Packages/User" "${PWD}/su
 # Keyboard shortcuts
 sudo defaults write com.apple.universalaccess com.apple.custommenu.apps -array-add \
     NSGlobalDomain \
-    'net.kovidgoyal.kitty' \
     'com.google.Chrome' \
     'com.sublimetext.4'
 defaults write NSGlobalDomain NSUserKeyEquivalents -dict-add \
     'Hide Others' '@~$h' \
     'Minimize' '@$m'
-defaults write 'net.kovidgoyal.kitty' NSUserKeyEquivalents -dict-add \
-    'Hide kitty' '@~h' \
-    'Quit kitty' '@~q'
 defaults write 'com.google.Chrome' NSUserKeyEquivalents -dict-add \
     'Hide Google Chrome' '@^$h'
 defaults write 'com.sublimetext.4' NSUserKeyEquivalents -dict-add \
